Remove category badges from product cards, add TheQbitlabs credit to footer

--- a/products.html
+++ b/products.html
@@ -207,7 +207,7 @@
                             <div class="brand-icon siemens-icon">
                                 <img src="/assets/img/logos/siemens-logo.png" alt="Siemens Logo">
                             </div>
-                            <span class="category-badge">Automation Leader</span>
+
                         </div>
                         <div class="card-content">
                             <p class="brand-description">
@@ -248,7 +248,7 @@
                             <div class="brand-icon mitsubishi-icon">
                                 <img src="/assets/img/logos/mitsubishi-logo.png" alt="Mitsubishi Electric Logo">
                             </div>
-                            <span class="category-badge">Factory Automation</span>
+
                         </div>
                         <div class="card-content">
                             <p class="brand-description">
@@ -289,7 +289,7 @@
                             <div class="brand-icon delta-icon">
                                 <img src="/assets/img/logos/delta-logo.png" alt="Delta Logo">
                             </div>
-                            <span class="category-badge">Energy Solutions</span>
+
                         </div>
                         <div class="card-content">
                             <p class="brand-description">
@@ -330,7 +330,7 @@
                             <div class="brand-icon yaskawa-icon">
                                 <img src="/assets/img/logos/yaskawa-logo.png" alt="Yaskawa Logo">
                             </div>
-                            <span class="category-badge">Motion Control</span>
+
                         </div>
                         <div class="card-content">
                             <p class="brand-description">
@@ -371,7 +371,7 @@
                             <div class="brand-icon omron-icon">
                                 <img src="/assets/img/logos/omron-logo.png" alt="Omron Logo">
                             </div>
-                            <span class="category-badge">Innovation</span>
+
                         </div>
                         <div class="card-content">
                             <p class="brand-description">
@@ -413,7 +413,7 @@
                                 <img src="/assets/img/logos/custom-solutions-logo.png"
                                     alt="Custom Control Panel Solutions">
                             </div>
-                            <span class="category-badge">Custom Solutions</span>
+
                         </div>
                         <div class="card-content">
                             <p class="brand-description">
@@ -1251,7 +1251,9 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 NovaGen Automation Systems & Solution. All rights reserved. | ISO 9001:2015 Certified</p>
+                <p>&copy; 2025 NovaGen Automation Systems & Solution. All rights reserved. | ISO 9001:2015 Certified |
+                    Design by <a href="https://theqbitlabs.com" target="_blank" rel="noopener"
+                        style="color: var(--brand-accent);">TheQbitlabs</a></p>
             </div>
         </div>
     </footer>
