--- a/vision.html
+++ b/vision.html
@@ -458,7 +458,9 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 NovaGen Automation Systems & Solution. All rights reserved. | ISO 9001:2015 Certified</p>
+                <p>&copy; 2025 NovaGen Automation Systems & Solution. All rights reserved. | ISO 9001:2015 Certified |
+                    Design by <a href="https://theqbitlabs.com" target="_blank" rel="noopener"
+                        style="color: var(--brand-accent);">TheQbitlabs</a></p>
             </div>
         </div>
     </footer>
